--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,30 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+
+// .create-picture-component{
+//   form {
+//     position: relative;
+//     .status{
+//       z-index: 1;
+//       letter-spacing: 0.1em;
+//       background-color: rgba($green, .9);
+//       // height: 0;
+//       height: 100%;
+//       display: flex;
+//       align-items: center;
+//       justify-content: center;
+//       position: absolute;
+//       bottom: -5px;
+//       left: -5px;
+//       right: -5px;
+//       transition: height .3s;
+//       .text{
+//         color: $white;
+//         // display: none;
+//         display: block;
+//       }
+//     }
+//   }
+// }
